hexagonal implementation, Used TDD approach to implement controller layer, swagger configuration, H2 configuration